# Mod-10-Real-Time-Customer-Heart-Beat-Monitoring-System

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  README.md  docker-compose.yml  pyproject.toml  rav.yaml  requirements.txt  result.txt  user_guide.md
.github/workflows/: ci.yml
.temp/: Using-uv-with-pre-commit-uv-2026-02-26.md  using-uv-in-GitHub-Actions-uv-2026-02-26.md
dashboard/: app.py
docs/: README.md
grafana/provisioning/dashboards/: dashboard.yml  heartbeat-monitor.json
grafana/provisioning/datasources/: datasource.yml
sql/: schema.sql
src/: config.py  data_generator.py  db.py  kafka_consumer.py  kafka_producer.py
tests/: conftest.py  test_config.py  test_data_generator.py  test_db.py  test_kafka_consumer.py  test_kafka_producer.py  test_pipeline.py
